--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   table_calendar: ^2.0.1
+  # group_list_view: ^1.0.6
+  #auto_size_text: ^2.1.0
 
 dev_dependencies:
   flutter_test:
